# cgltf

./: README.md  cgltf.h  cgltf_write.h
vrm/: README.md  vrm_type_generator.js  vrm_types.h  vrm_types.inl  vrm_types.v0_0.h  vrm_types.v1_0.h  vrm_types.v1_0.inl  vrm_types_footer.txt  vrm_types_header.txt  vrm_write.inl  vrm_write.v0_0.inl  vrm_write.v1_0.inl
vrm/glb2vrm/: CMakeLists.txt  README.md  glb2vrm.cpp  input.json  input.meta.json  input.mixamo.bones.json  input.rocketbox.bones.json  math.inl  mixamo.bones.json
vrm/schema/1.0/: 17.VRMC_vrm.lookAt.schema.json
vrm/test/: CMakeLists.txt  run_test_write.js  test_write.cpp  vrm_format_check.js
vrm/vrm2glb/: CMakeLists.txt  README.md  vrm2glb.cpp
